--- a/catalog.html
+++ b/catalog.html
@@ -5,151 +5,171 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Каталог отелей в Седоне</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic;display=swap">
+    <link href="normalize.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
-    <header>
-        <nav>
-            <a href="index.html">
-                <img src="img/logo.svg" width="138" height="70" alt="Логотип городка Сидона">
-            </a>
-            <img src="https://via.placeholder.com/1200x56" alt="top menu">
-            <ul>
-                <!-- Основное меню -->
-                <li><a href="#">Информация</a></li>
-                <li><a href="#">Фото и видео</a></li>
-                <li><a href="#">Карта штата</a></li>
-                <li><a href="#">Гостиницы</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <div class="hotels">
-            <form action="https://echo.htmlacademy.ru/" method="post">
-                <div>
-                    <h4>Инфраструктура:</h4>
-                    <input type="checkbox" id="id-pool" value="value-pool" checked>
-                    <label for="id-pool">Бассейн</label>
-                    <input type="checkbox" id="id-park" value="value-parking">
-                    <label for="id-park">Парковка</label>
-                    <input type="checkbox" id="id-wifi" value="value-wifi">
-                    <label for="id-wifi">Wi-Fi</label>
+<body class="page-body inner-page">
+    <main class="shadow">
+        <header class="main-header">
+            <nav class="main-navigation">
+                <a class="main-header-logo" href="index.html">
+                    <img src="img/logo.svg" width="138" height="70" alt="Логотип городка Сидона">
+                </a>
+                <div class="main-navigation-wrapper">
+                    <ul class="site-navigation">
+                        <!-- Основное меню -->
+                        <li><a href="#">Информация</a></li>
+                        <li><a href="#">Фото и видео</a></li>
+                        <li><a href="#">Карта штата</a></li>
+                        <li><a href="#">Гостиницы</a></li>
+                    </ul>
                 </div>
-                <div>
-                    <h4>Тип жилья:</h4>
-                    <input type="checkbox" id="id-hotel" value="value-hotel">
-                    <label for="id-hotel">Гостиница</label>
-                    <input type="checkbox" id="id-motel" value="value-motel">
-                    <label for="id-motel">Мотель</label>
-                    <input type="checkbox" id="id-apart" value="value-apart">
-                    <label for="id-apart">Апартаменты</label>
-                </div>
-                <div>
-                    <label for="id-price">Стоимость в сутки, ₽:</label><br>
-                    <p>от 0</p>
-                    <p>До 3000</p>
-                    <input type="range" id="id-price" name="price" min="0" max="3000"><br>
-                    <button type="submit">Показать</button>
-                </div>
-            </form>
-            <img src="img/background.png" alt="фон">
-        </div>
-        <h3>Найдено: 3</h3>
-        <p>Сортировка:</p>
-        <p>По цене</p>
-        <p>По типу</p>
-        <p>По рейтингу</p>
-        <ul>
-            <li>
-                <div>
-                    <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
-                    <h3>Amara Resort & Spa</h3>
-                    <!--4 звездочки -->
-                    <span>&#9733; &#9733; &#9733; &#9733;</span>
-                    <table>
-                        <tr>
-                            <td>Гостиница</td>
-                            <td>от 4000 <span>&#8381;</span></td>
-                        </tr>
-                        <tr>
-                            <td>Подробнее</td>
-                            <td>Забронировать</td>
-                        </tr>
-                    </table>
-                    <p>Рейтинг: 8,5</p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
-                    <h3>Desert Quail Inn</h3>
-                    <!--3 звездочки -->
-                    <span>&#9733; &#9733; &#9733;</span>
-                    <table>
-                        <tr>
-                            <td>Гостиница</td>
-                            <td>от 3000 <span>&#8381;</span></td>
-                        </tr>
-                        <tr>
-                            <td>Подробнее</td>
-                            <td>Забронировать</td>
-                        </tr>
-                    </table>
-                    <p>Рейтинг: 8,9</p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
-                    <h3>Villas at Poco Diablo</h3>
-                    <!--2 звездочки -->
-                    <span>&#9733; &#9733;</span>
-                    <table>
-                        <tr>
-                            <td>Гостиница</td>
-                            <td>от 2000 <span>&#8381;</span></td>
-                        </tr>
-                        <tr>
-                            <td>Подробнее</td>
-                            <td>Забронировать</td>
-                        </tr>
-                    </table>
-                    <p>Рейтинг: 9,2</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-    <footer>
-        <div>
-            <img src="https://via.placeholder.com/1200x120" alt="rectangle">
-            <ul>
-                <li>
-                    <p>#visitSEDONA</p>
-                    <p>+7 800 555-86-28</p>
+            </nav>
+        </header>
+
+        <section class="filter-hotels">
+            <div class="container">
+                <img class="picture" src="img/background.png" width="1200" height="217" alt="фон">
+            </div>
+            <div class="container">
+                <form action="https://echo.htmlacademy.ru/" method="post" class="filter-box">
+                    <div class="inner-container">
+                        <h4>Инфраструктура:</h4>
+                        <label for="id-pool">
+                            <input type="checkbox" id="id-pool" value="value-pool" checked>
+                        Бассейн</label>
+                        <label for="id-park">
+                            <input type="checkbox" id="id-park" value="value-parking">
+                        Парковка</label>
+                        <label for="id-wifi">
+                            <input type="checkbox" id="id-wifi" value="value-wifi">
+                        Wi-Fi</label>
+                    </div>
+                    <div class="inner-container">
+                        <h4>Тип жилья:</h4>
+                        <label for="id-hotel">
+                            <input type="checkbox" id="id-hotel" value="value-hotel" checked>
+                        Гостиница</label>
+                        <label for="id-motel">
+                            <input type="checkbox" id="id-motel" value="value-motel" checked>
+                        Мотель</label>
+                        <label for="id-apart">
+                            <input type="checkbox" id="id-apart" value="value-apart" checked>
+                        Апартаменты</label>
+                    </div>
+                    <div class="inner-container">
+                        <label for="id-price">Стоимость в сутки, ₽:<br>
+                        <span>от 0</span>
+                        <span>До 3000</span><br>
+                        <input type="range" id="id-price" name="price" min="0" max="3000"><br>
+                        </label><br>
+                        <button type="submit">Показать</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <section class="catalog-hotels">
+            <div class="container">
+                <h3>Найдено: 3</h3>
+                <p>Сортировка:</p>
+                <p>По цене</p>
+                <p>По типу</p>
+                <p>По рейтингу</p>
+            </div>
+            <ul class="catalog-list">
+                <li class="catalog-item">
+                    <div>
+                        <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
+                        <h3>Amara Resort & Spa</h3>
+                        <!--4 звездочки -->
+                        <span>&#9733; &#9733; &#9733; &#9733;</span>
+                        <table>
+                            <tr>
+                                <td>Гостиница</td>
+                                <td>от 4000 <span>&#8381;</span></td>
+                            </tr>
+                            <tr>
+                                <td>Подробнее</td>
+                                <td>Забронировать</td>
+                            </tr>
+                        </table>
+                        <p>Рейтинг: 8,5</p>
+                    </div>
                 </li>
-                <li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
+                        <h3>Desert Quail Inn</h3>
+                        <!--3 звездочки -->
+                        <span>&#9733; &#9733; &#9733;</span>
+                        <table>
+                            <tr>
+                                <td>Гостиница</td>
+                                <td>от 3000 <span>&#8381;</span></td>
+                            </tr>
+                            <tr>
+                                <td>Подробнее</td>
+                                <td>Забронировать</td>
+                            </tr>
+                        </table>
+                        <p>Рейтинг: 8,9</p>
+                    </div>
+                </li>
+                <li class="catalog-item">
+                    <div>
+                        <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
+                        <h3>Villas at Poco Diablo</h3>
+                        <!--2 звездочки -->
+                        <span>&#9733; &#9733;</span>
+                        <table>
+                            <tr>
+                                <td>Гостиница</td>
+                                <td>от 2000 <span>&#8381;</span></td>
+                            </tr>
+                            <tr>
+                                <td>Подробнее</td>
+                                <td>Забронировать</td>
+                            </tr>
+                        </table>
+                        <p>Рейтинг: 9,2</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer class="main-footer">
+        <div class="container">
+            <div>
+                <p class="footer-contacts a">
+                    <a href="#">#visitSEDONA</a>
+                    <a href="#">+7 800 555-86-28</a>
+                </p>
+            </div>
+            <ul class="footer-social">
+                <li class="social-button a">
                     <a href="#">
                         <img src="img/twitter_logo.svg" width="17" height="17" alt="лого Twitter">
                     </a>
                 </li>
-                <li>
+                <li class="social-button">
                     <a href="#">
                         <img src="img/fb_icon.svg" width="12" height="22" alt="иконка Facebook">
                     </a>
                 </li>
-                <li>
+                <li class="social-button">
                     <a href="#">
                         <img src="img/youtube_logo.svg" width="20" height="16" alt="иконка youtube">
                     </a>
                 </li>
-                <li>
-                    <p>WEBSITE BY
-                        <a href="https://htmlacademy.ru/intensive/htmlcss">
-                            <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
-                        </a>
-                    </p>
-                </li>
             </ul>
+            <p class="footer-copyright">WEBSITE BY
+                <a href="https://htmlacademy.ru/intensive/htmlcss">
+                    <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
+                </a>
+            </p>
+        </div>
         </div>
     </footer>
 </body>
