--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Каталог отелей в Седоне</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic;display=swap">
-    <link href="normalize.css" rel="stylesheet">
+    <link href="https://necolas.github.io/normalize.css/latest/normalize.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -60,7 +60,7 @@
                         Апартаменты</label>
                     </div>
                     <div class="inner-container">
-                        <label for="id-price">Стоимость в сутки, ₽:<br>
+                        <label for="id-price">Стоимость в сутки, &#8381;:<br>
                         <span>от 0</span>
                         <span>До 3000</span><br>
                         <input type="range" id="id-price" name="price" min="0" max="3000"><br>
@@ -70,69 +70,95 @@
                 </form>
             </div>
         </section>
-        <section class="catalog-hotels">
-            <div class="container">
-                <h3>Найдено: 3</h3>
-                <p>Сортировка:</p>
-                <p>По цене</p>
-                <p>По типу</p>
-                <p>По рейтингу</p>
-            </div>
+        <section>
+            <ul class="list-filters">
+                <li>
+                    <a href="#">
+                        <h3>Найдено: 3</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p>Сортировка:</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p>По цене</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p>По типу</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p>По рейтингу</p>
+                    </a>
+                </li>
+            </ul>
             <ul class="catalog-list">
                 <li class="catalog-item">
-                    <div>
-                        <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
+                    <img src="img/hotel1.png" width="135" height="90" alt="гостиница Amara Resort & Spa">
+                    <div class="info">
                         <h3>Amara Resort & Spa</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 4000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
                         <!--4 звездочки -->
-                        <span>&#9733; &#9733; &#9733; &#9733;</span>
-                        <table>
-                            <tr>
-                                <td>Гостиница</td>
-                                <td>от 4000 <span>&#8381;</span></td>
-                            </tr>
-                            <tr>
-                                <td>Подробнее</td>
-                                <td>Забронировать</td>
-                            </tr>
-                        </table>
+                        <p class="stars">&#9733; &#9733; &#9733; &#9733;</p>
                         <p>Рейтинг: 8,5</p>
                     </div>
                 </li>
                 <li class="catalog-item">
+                    <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
                     <div>
-                        <img src="img/hotel2.png" width="135" height="90" alt="гостиница Desert Quail Inn">
                         <h3>Desert Quail Inn</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 3000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
                         <!--3 звездочки -->
-                        <span>&#9733; &#9733; &#9733;</span>
-                        <table>
-                            <tr>
-                                <td>Гостиница</td>
-                                <td>от 3000 <span>&#8381;</span></td>
-                            </tr>
-                            <tr>
-                                <td>Подробнее</td>
-                                <td>Забронировать</td>
-                            </tr>
-                        </table>
+                        <p class="stars">&#9733; &#9733; &#9733;</p>
                         <p>Рейтинг: 8,9</p>
                     </div>
                 </li>
                 <li class="catalog-item">
+                    <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
                     <div>
-                        <img src="img/hotel3.png" width="135" height="90" alt="гостиница Villas at Poco Diablo">
                         <h3>Villas at Poco Diablo</h3>
+                        <div class="table">
+                            <div class="table-row">
+                                <div class="table-cell">Гостиница</div>
+                                <div class="table-cell">от 2000 <span>&#8381;</span></div>
+                            </div>
+                            <div class="table-row">
+                                <div class="table-cell btn-detailed"><a href="#">Подробнее</a></div>
+                                <div class="table-cell btn-reserve"><a href="#">Забронировать</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rating">
                         <!--2 звездочки -->
-                        <span>&#9733; &#9733;</span>
-                        <table>
-                            <tr>
-                                <td>Гостиница</td>
-                                <td>от 2000 <span>&#8381;</span></td>
-                            </tr>
-                            <tr>
-                                <td>Подробнее</td>
-                                <td>Забронировать</td>
-                            </tr>
-                        </table>
+                        <p class="stars">&#9733; &#9733;</p>
                         <p>Рейтинг: 9,2</p>
                     </div>
                 </li>
@@ -169,7 +195,6 @@
                     <img src="img/logo_html.svg" width="104" height="36" alt="лого HTML-academy">
                 </a>
             </p>
-        </div>
         </div>
     </footer>
 </body>
